# AsciiIngest

./: AsciiIngest.doxyfile  CMakeLists.txt  INSTALL  NOTICE  README
AsciiIngest/: AsciiDataObjDesc.cpp  AsciiDataObjDesc.h  AsciiHeaderReader.cpp  AsciiHeaderReader.h  AsciiIngest.1  AsciiReader.cpp  AsciiReader.h  AsciiSchemaMapper.cpp  AsciiSchemaMapper.h  Makefile  TMPFormat.frm  TestData.old  TestFormat.frm  asciiingest_error.cpp  asciiingest_error.h  custGetLine.cpp  custGetLine.h  main.cpp
Example/: BDM.frm  Dens.frm  README-examples.md  createtable-BDMW-mysql.sql  createtable-Dens-mysql.sql
Modules/: FindMysql.cmake  FindODBC.cmake  FindSQLITE3.cmake
doc/: userguide.lyx
